cmake_minimum_required(VERSION 3.5)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_definitions(-std=c++11 -O3 -ggdb)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( drawImage drawTestRect.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( drawImage ${OpenCV_LIBS} )
